changed media pics, added veggies on home page, fixed nav bar spacing

--- a/src/style.css
+++ b/src/style.css
@@ -36,6 +36,7 @@ ul {
 
 li {
     display: inline;
+    margin: 0px 7.5px 0px 7.5px;
 }
 
 a {
@@ -51,7 +52,7 @@ footer {
     background-color: #84A98C;
 }
 
-.who-content {
+.home-section {
     display: flex;
     flex-direction: row;
 }
